--- a/src/style.css
+++ b/src/style.css
@@ -40,3 +40,25 @@ footer {
   color: #fffaf3;
   font-size: 16px;
 }
+.recommendations {
+  padding: 20px;
+  text-align: center;
+  font-size: 14px;
+  border: 4px solid #565448;
+  color: #11110d;
+  width: 50%;
+  display: flex;
+  margin: 0 auto;
+}
+.hidden {
+  display: none;
+}
+@keyframes blink-animation {
+  to {
+    visibility: hidden;
+  }
+}
+.generating {
+  animation: blink-animation 1s steps(5, start) infinite;
+  text-align: center;
+}
