--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
 header {
   font-size: 22px;
   padding: 20px;
-  background-image: url("/Users/laura/Desktop/GitHub/AI-Book-Generator-/src/books.jpg");
+  background-image: url("../images/books.jpg");
   width: 90%;
   margin: 0 auto;
   margin-bottom: 15px;
